<resources>
    <string name="app_name">PM Labs</string>
    <string name="lab_2">Lab 2</string>
    <string name="lab_1">Lab 1</string>
    <string name="android_labs">Android Labs</string>
    <string name="back">Back</string>
    <string name="text1">Андрусь Микита Сергійович</string>
    <string name="text3">Інженерія Програмного Забезпечення</string>
    <string name="trxt4">3 курс 180006Б</string>
    <string name="text5">Навчитися програмувати мобільні додатки</string>
    <string name="enter_x">Enter X</string>
    <string name="enter_step">Enter step</string>
    <string name="enter_count">Enter count</string>
    <string name="calculate">Calculate</string>
    <string name="lab_3">Lab 3</string>
    <string name="load_last_values">Load last values</string>
    <string name="title_activity_lab4">Lab4</string>
    <string name="tab_text_1">Graph</string>
    <string name="tab_text_2">Text File</string>
</resources>