<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353535"
    tools:context=".Lab3">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lab_3"
        android:textColor="#F6F6F6"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/xenter1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/xenter1"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:background="#4C4C4C"
        android:ems="10"
        android:hint="@string/enter_x"
        android:inputType="number|numberDecimal"
        android:textColor="#CFCFCF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/stepenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/stepenter"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#4C4C4C"
        android:ems="10"
        android:hint="@string/enter_step"
        android:inputType="number|numberDecimal"
        android:textColor="#CFCFCF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/countEnt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xenter1" />

    <EditText
        android:id="@+id/countEnt"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="23dp"
        android:autofillHints=""
        android:background="#4C4C4C"
        android:ems="10"
        android:hint="@string/enter_count"
        android:inputType="number|numberDecimal"
        android:textColor="#CFCFCF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/ResultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepenter" />

    <Button
        android:id="@+id/LoadButton"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="18dp"
        android:background="#787878"
        android:onClick="onLoadClick"
        android:text="@string/load_last_values"
        android:textColor="#DADADA"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/calculatebutton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResultText" />

    <Button
        android:id="@+id/calculatebutton2"
        android:layout_width="322dp"
        android:layout_height="62dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="41dp"
        android:background="#787878"
        android:onClick="onButtonClick"
        android:text="@string/calculate"
        android:textColor="#DADADA"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoadButton" />


    <TextView
        android:id="@+id/ResultText"
        android:layout_width="357dp"
        android:layout_height="241dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="16dp"
        android:scrollbarStyle="outsideInset"
        android:textColor="#C6C6C6"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/LoadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countEnt" />


</androidx.constraintlayout.widget.ConstraintLayout>