<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353535"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/labutton1"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:width="@android:dimen/app_icon_size"
        android:background="#777777"
        android:lineSpacingExtra="36sp"
        android:lines="@android:integer/config_mediumAnimTime"
        android:onClick="Lab1onClick"
        android:shadowColor="#00000000"
        android:text="@string/lab_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/labutton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/labutton2"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="456dp"
        android:width="@android:dimen/app_icon_size"
        android:background="#777777"
        android:lineSpacingExtra="36sp"
        android:lines="@android:integer/config_mediumAnimTime"
        android:onClick="Lab2onClick"
        android:shadowColor="#00000000"
        android:text="@string/lab_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labutton1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="301dp"
        android:layout_height="73dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="30dp"
        android:text="@string/android_labs"
        android:textColor="#F8F8F8"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/labutton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>